# Cpp_Exercises

./: .gitignore  CMakeLists.txt  README.md
init_progs/: CMakeLists.txt  gas_pipes.cpp
part1/: CMakeLists.txt  dublicates.cpp  dynamic_prog1.cpp  lonely_ones.cpp  recursion.cpp
part2/: CMakeLists.txt  pyramid_369.cpp  pyramid_369_3.cpp  pyramid_contour_378.cpp  symbols_in_raw_451.cpp  symbols_in_raw_451_2.cpp
part3/: CMakeLists.txt  ltrim_no_req.cpp  word_count.cpp  words_num.cpp
part4/: CMakeLists.txt  e1_longest_word_455.cpp  e2_num_to_str_460.cpp  e3_ints_pasres_485.cpp  e4_long_arithm_486.cpp  e4_long_arithm_486_final.cpp  e5_same_col_raw_513.cpp
part5/: CMakeLists.txt  e1_five_in_raw_516.cpp  e2_spiral_517.cpp
