cmake_minimum_required(VERSION 2.8)

project(part4)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

add_executable(ints_pasres_485 e3_ints_pasres_485.cpp)
add_executable(long_arithm_486 e4_long_arithm_486.cpp)
add_executable(longest_word_455 e1_longest_word_455.cpp)
add_executable(num_to_str_460 e2_num_to_str_460.cpp)
add_executable(same_col_raw_513 e5_same_col_raw_513.cpp)

